<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Fragments.Actualizar_PerfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ape_pat" android:id="@+id/apell_pat" android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ape_mat" android:id="@+id/apell_mat" android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout4"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomb" android:id="@+id/nombres" android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout5"
            app:layout_constraintBottom_toTopOf="@+id/registrar"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline14"
            android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direcc" android:id="@+id/direccion" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrar"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline12"
            android:background="@color/colorPrimary" android:textColor="@color/primaryTextColor"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline9"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.25"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:id="@+id/textInputLayout6"
            app:layout_constraintBottom_toTopOf="@+id/registrar" android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline14" android:layout_marginStart="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero" android:id="@+id/numero" android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>
    <ImageView
            android:src="@drawable/carrito"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/foto"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline9"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline12"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.85"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline13" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline14"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.77"/>
</android.support.constraint.ConstraintLayout>