<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/item">
    <ImageView
            android:id="@+id/foto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#E6E6E6"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintBottom_toTopOf="@+id/guideline5">

        <TextView
                android:id="@+id/precio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                android:textStyle="normal|bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/nombre"
                app:layout_constraintVertical_chainStyle="spread_inside"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline6"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/precio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline6" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/comprar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/comprar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline6"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.64"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33"/>

</android.support.constraint.ConstraintLayout>