<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/estados" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/actualizar"/>
    <Button
            android:text="@string/actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actualizar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/estados"
            android:textColor="@color/primaryTextColor" android:background="@color/colorAccent"/>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorAccent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardView2"
            app:layout_constraintBottom_toTopOf="@+id/estados">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/idpedido" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/nombre"
                    android:textSize="18sp" app:layout_constraintStart_toStartOf="@+id/guideline21"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/nombre"
                    app:layout_constraintTop_toBottomOf="@+id/idpedido" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline21" android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/num_pedi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" app:layout_constraintEnd_toStartOf="@+id/guideline21"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/textView9" android:textSize="18sp"
                    app:layout_constraintVertical_chainStyle="spread_inside" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/cliente"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline21"
                    android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:textSize="18sp"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/guideline21"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.37"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>